# ark

./: .gitignore  AGENTS.md  README.md  ag_news_noise.json  bench_raptis.py  generate_edges.py  pyproject.toml  reembed.py  run_recall_test.py  seed_ag_news.py  seed_noise.py  seed_tech_noise.py  tech_noise.json  test_recall.py  test_recall_brutal.py  test_recall_hard.py
.claude/skills/ark-history/: SKILL.md
.claude/skills/ark-memory/: SKILL.md
.claude/skills/ark-rag/: SKILL.md
src/ark/: cli.py  config.py  history.py  local.py  memory.py  rag.py  serve.py  session.py  setup.py
src/ark/engine/: __init__.py  circuit_breaker.py  dreamer.py  embed.py  embedding_cache.py  graph.py  graph_store.py  index.py  query_expand.py  result.py  search.py  spectral.py  surprisal.py  temporal.py  tokenizer.py  types.py
src/ark/tools/: __init__.py  code_search.py  memory.py  rag.py  web.py
src/ark_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
