[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-agent"
version = "0.1.0"
description = "Memory and tools CLI for AI agents"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "aiohttp>=3.9",
    "rich>=13.0",
]

[project.scripts]
ark = "ark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
