[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-agent"
version = "0.1.0"
description = "Memory and tools CLI for AI agents"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "aiohttp>=3.9",
    "rich>=13.0",
    "tantivy>=0.22",
    "numpy>=1.26",
    "msgspec>=0.18",
    "semantic-text-splitter>=0.13",
    "fastembed>=0.8.0",
]

[project.optional-dependencies]
embeddings = ["fastembed>=0.3", "catsu>=0.1"]

[project.scripts]
ark = "ark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
